ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - "*.k8s.ad.mikolajmurawski.pl"
      secretName: ingress-tls
  ingressClassName: nginx
  rules:
    - host: "*.k8s.ad.mikolajmurawski.pl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loadbalancer
                port:
                  number: 80
